[B]1.3.3[/B]
Proper channels order in the list
Autorecovery if cookie file was broken (https://github.com/Eugene-Bond/xmbc-plugins/issues/10)

[B]1.3.2[/B]
XBMC 13.1 Gotham compatibility
GeoIP service provider changed (https://github.com/Eugene-Bond/xmbc-plugins/issues/6)

[B]1.3.1[/B]
XBMC 13 Gotham compatibility

[B]1.3.0[/B]
Moved to Git

[B]1.2.0[/B]
Rodnoe API v1 is used
Fixed problem with timezones
Auto detection timezone feature
Removed some deprecated in v11 code

[B]1.1.3[/B]
Current playing video info auto-disapearing

[B]1.1.2[/B]
"Broadcasting server" setting added

[B]1.1.1[/B]
Improved stability of previous/next navigation

[B]1.1.0[/B]
Jumping across next-previous channel (AKA TV mode)
Favourite channels + Favourite channels list
Current programme time infront of channel name option

[B]1.0.6[/B]
Autoselection of active programme in EPG/Archive view
Stoped forcing of full list mode
Auth via HTTP POST (to remove sensitive data from the log)
Reduced info logging (some stuff moved into debug log level)
Minor code refactoring 

[B]1.0.5[/B]
Improved JSON parsing speed on AppleTV 2
Minor channels list rendering tuning
Channel list display options extended
Addon settings divided into sections

[B]1.0.4[/B]
Fixed checking auth problem if login is not defined
Added theoretical support of native RodnoeTV channels groups colorizing
Removed percentage for the channels where duration is not available

[B]1.0.3[/B]
Added current program duration and %% (thanks to Alexandr Dubovikov)

[B]1.0.2[/B]
Session cookies migrated into the cookie jar

[B]1.0.1[/B]
Fixed a problem with Win32 running on x64 platforms

[B]1.0.0[/B]
Initial release