@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.rodnoe.tv"
        name="Rodnoe.TV"
-       version="1.3.3"
+       version="1.4.0"
        provider-name="Eugene Bond">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
