@@ -44,6 +44,8 @@
 	<string id="30041">Избранные каналы</string>
 	<string id="30042">Все ТВ каналы</string>
 	<string id="30043">Определять временную зону автоматически</string>
+	<string id="30044">Все новинки</string>
+	<string id="30045">Категории каналов</string>
 	<string id="31001">Общие настройки</string>
 	<string id="31002">Список каналов</string>
 	<string id="34001">Сервер вещания</string>
